Tweak UI for #348

--- a/src/components/grid-control/styles/editor.scss
+++ b/src/components/grid-control/styles/editor.scss
@@ -1,13 +1,23 @@
-// Style the clickable areas for the column/layout placeholder.
 .components-coblocks-grid-dropdown {
-	.components-coblocks-css-grid-selector{
+	padding: 16px !important;
+
+	.components-coblocks-css-grid-selector {
 		width: 100%;
 
-		.components-base-control__label{
+		.components-button-group {
+			margin-bottom: 0;
+		}
+
+		.components-base-control__label {
 			display: none;
 		}
 	}
-	.components-base-control__help{
-		display:none;
+
+	.components-toggle-control {
+		border-top: 1px solid #e2e4e7;
+		color: #555d66;
+		margin: 16px -16px -16px;
+		padding: 18px 16px 14px;
+		width: calc(100% + 32px);
 	}
 }
