Tweak row block inserter background color

--- a/src/blocks/row/styles/editor.scss
+++ b/src/blocks/row/styles/editor.scss
@@ -597,7 +597,7 @@ div[data-type="coblocks/column"] {
 				position: relative;
 
 				.components-button {
-					background: #f3f4f5;
+					background: rgba(139, 139, 150, 0.1);
 					border: 1px dashed #d3d5d8;
 					border-radius: 0;
 					box-shadow: none !important;
