--- a/src/styles/style/_margin.scss
+++ b/src/styles/style/_margin.scss
@@ -19,13 +19,23 @@ body {
 		}
 
 		&.has-large-margin {
-			margin-bottom: 34px;
-			margin-top: 34px;
+			margin-bottom: 24px;
+			margin-top: 24px;
+
+			@include break-small() {
+				margin-bottom: 34px;
+				margin-top: 34px;
+			}
 		}
 
 		&.has-huge-margin {
-			margin-bottom: 60px;
-			margin-top: 60px;
+			margin-bottom: 34px;
+			margin-top: 34px;
+
+			@include break-small() {
+				margin-bottom: 60px;
+				margin-top: 60px;
+			}
 		}
 	}
 }
