--- a/src/extensions/button-controls/styles/style.scss
+++ b/src/extensions/button-controls/styles/style.scss
@@ -1,6 +1,6 @@
 body{
 	.wp-block-button {
-		&.btn-is-full{
+		&.w-100{
 			.wp-block-button__link{
 				width: 100%;
 			}
@@ -10,7 +10,7 @@ body{
 	.wp-block-coblocks-buttons{
 		&__inner{
 			.wp-block-button {
-				&.btn-is-full{
+				&.w-100{
 					width: 100% !important;
 				}
 			}
