--- a/src/blocks/media-card/styles/style.scss
+++ b/src/blocks/media-card/styles/style.scss
@@ -64,6 +64,7 @@
 		margin-left: -50%;
 		word-break: break-word;
 		z-index: 1;
+		position: relative;
 
 		@include break-small-mediacard {
 			margin-left: -100px;
