--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -1,5 +1,6 @@
 .wp-block-coblocks-features {
-	&, &__inner {
+	&,
+	&__inner {
 		position: relative;
 	}
 
@@ -62,10 +63,6 @@
 			}
 		}
 
-		> * {
-			z-index: 2;
-		}
-
 		> *:last-child {
 			margin-bottom: 0;
 		}
@@ -92,56 +89,13 @@
 	}
 
 	.wp-block-coblocks-feature__inner {
-
 		// Add padding so the feature does not run into the viewport edge on mobile.
 		&.has-no-padding {
 			padding: 0 10px;
 		}
 
-		> *{
+		> * {
 			position: relative;
 		}
 	}
 }
-
-// [data-columns="3"] {
-// 	.wp-block-coblocks-feature__inner {
-
-// 		@media (min-width: 900px) {
-// 			flex-wrap: nowrap;
-// 		}
-// 	}
-
-// 	.wp-block-coblocks-feature {
-// 		flex-basis: 29%;
-// 		background: red;
-
-// 		@media (max-width: 899px) {
-// 			&:nth-of-type(1) {
-// 				width: 100%;
-// 			}
-
-// 			&:nth-of-type(2),
-// 			&:nth-of-type(3) {
-// 				// margin-bottom: 30px;
-// 			}
-
-
-// 		}
-
-// 		@media (max-width: 599px) {
-// 			&:nth-of-type(3) {
-// 				margin-left: 0;
-// 			}
-
-// 		}
-
-// 		// @media (max-width: 599px) {
-// 		// 	&:nth-of-type(1),
-// 		// 	&:nth-of-type(2),
-// 		// 	&:nth-of-type(3) {
-// 		// 		margin: 0 0 30px 0;
-// 		// 	}
-// 		// }
-// 	}
-// }
