--- a/src/styles/editor/_icons.scss
+++ b/src/styles/editor/_icons.scss
@@ -20,11 +20,12 @@
 	}
 }
 
-.editor-block-icon.has-colors::after {
-	color: $dark-gray-500;
-}
+.editor-block-icon.has-colors {
+	&::after {
+		color: $dark-gray-500;
+	}
 
-// .edit-post-pinned-plugins .components-icon-button svg.coblocks-logo--svg--sidebar,
-// .edit-post-pinned-plugins .components-icon-button svg.coblocks-logo--svg--sidebar * {
-// 	stroke: none !important;
-// }
+	svg {
+		margin-right: 0;
+	}
+}
