--- a/src/components/visual-dropdown/styles/editor.scss
+++ b/src/components/visual-dropdown/styles/editor.scss
@@ -204,6 +204,8 @@
 
 		.editor-block-styles__item-label {
 			color: #555d66;
+			margin-top: 4px;
+			text-align: center;
 		}
 
 		.components-coblocks-visual-dropdown__button-wrapper:hover {
