--- a/src/blocks/pricing-table/styles/editor.scss
+++ b/src/blocks/pricing-table/styles/editor.scss
@@ -1,4 +1,7 @@
 .editor-block-list__block[data-type="coblocks/pricing-table"] {
+	margin-bottom: -15px;
+	margin-top: -15px;
+
 	.wp-block-coblocks-pricing-table {
 		&__inner {
 			margin-left: 0 !important;
@@ -25,24 +28,41 @@
 		display: none;
 	}
 
+	// Tweak the position of the selection border.
+	> .block-editor-block-list__block-edit::before {
+		bottom: 1px;
+		top: 1px;
+	}
+
+	.wp-block[data-type="coblocks/pricing-table-item"] {
+		margin-bottom: 15px;
+		margin-top: 15px;
+
+		@media (min-width: 600px) {
+			flex-basis: 40%;
+			flex-grow: 1;
+			max-width: 100%;
+		}
+	}
+
 	&[data-align="wide"],
 	&[data-align="full"] {
 		.editor-block-list__block {
 			max-width: none;
 		}
-	}
 
-	.wp-block:nth-of-type(3),
-	.wp-block:nth-of-type(4) {
-		margin-bottom: 30px;
-		margin-top: 30px;
-	}
+		.wp-block[data-type="coblocks/pricing-table-item"] {
+			@media (min-width: 600px) {
+				flex-basis: 33%;
+			}
+		}
 
-	.wp-block[data-type="coblocks/pricing-table-item"] {
-		@media (min-width: 600px) {
-			flex-basis: 40%;
-			flex-grow: 1;
-			max-width: 100%;
+		.has-4-columns {
+			.wp-block[data-type="coblocks/pricing-table-item"] {
+				@media (min-width: 600px) {
+					flex-basis: 25%;
+				}
+			}
 		}
 	}
 }
