Add responsive height control

--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -104,6 +104,7 @@
 
 	// Show resize handle when the block is selected.
 	&.is-selected {
+		.wp-block-coblocks-hero__inner,
 		.wp-block-coblocks-hero__box {
 			> span {
 				.components-resizable-box__handle {
