Hide vertical bar on Inner Hero block resizing

--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -99,6 +99,16 @@
 					}
 				}
 			}
+
+			&.is-hero-resizing{
+				.wp-block-coblocks-hero__box {
+					&.is-resizing {
+						&::after {
+							opacity: 0;
+						}
+					}
+				}
+			}
 		}
 	}
 
