--- a/src/components/visual-dropdown/styles/editor.scss
+++ b/src/components/visual-dropdown/styles/editor.scss
@@ -79,6 +79,10 @@
 		}
 	}
 
+	.editor-block-styles__item-label{
+		text-align: center;
+	}
+
 	&__back.components-icon-button {
 		background: #fff;
 		border: 1px solid rgba(25, 30, 35, 0.2);
