Add proper margin to Map block style selector #464

--- a/src/components/visual-dropdown/styles/editor.scss
+++ b/src/components/visual-dropdown/styles/editor.scss
@@ -79,7 +79,8 @@
 		}
 	}
 
-	.editor-block-styles__item-label{
+	.editor-block-styles__item-label {
+		margin-top: 4px;
 		text-align: center;
 	}
 
