[tiny] removed bottom right side resizable box handle

--- a/src/blocks/shape-divider/styles/editor.scss
+++ b/src/blocks/shape-divider/styles/editor.scss
@@ -24,7 +24,7 @@
 		}
 	}
 
-	.wp-block-coblocks-shape-divider__alt-wrapper .components-resizable-box__handle {
+	.wp-block-coblocks-shape-divider__alt-wrapper {
 		left: 0;
 		right: 0;
 		width: 100%;
