recentered add accordion item text

--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -28,18 +28,18 @@
 // The "Add Accordion Item" button
 .wp-block-coblocks-accordion {
 	.components-coblocks-add-accordion-item__button.components-button {
-		border-style: dashed;
+		border: 1px dashed #d3d5d8;
+		border-radius: 0;
+		color: #555d66;
 		box-shadow: none !important;
 		font-size: 14px;
-		height: 34px;
-		height: auto;
+		height: 40px;
 		justify-content: center;
 		line-height: 31px;
-		padding: 0 9px 0 8px;
-		padding: 8px 15px;
+		padding: 0 8px 0 8px;
 		text-align: center;
 		width: 100%;
-
+		background: rgba(139, 139, 150, 0.1);
 		svg {
 			margin-right: 5px;
 		}
