Added Remove button for API Key

--- a/src/blocks/map/styles/editor.scss
+++ b/src/blocks/map/styles/editor.scss
@@ -94,4 +94,7 @@ $styles: (standard), (silver), (retro), (dark), (night), (aubergine);
 			margin-bottom: 5px;
 		}
 	}
+  	.components-block-coblocks-map-api-key-remove__button {
+		margin-left: 5px;
+  	}
 }
