Tweak input field style and file toolbar input style

--- a/src/blocks/gist/styles/editor.scss
+++ b/src/blocks/gist/styles/editor.scss
@@ -1,5 +1,4 @@
 .wp-block-coblocks-gist {
-
 	&.wp-block-shortcode {
 		display: flex;
 		flex-direction: row;
@@ -7,14 +6,7 @@
 
 	.block-editor-plain-text {
 		margin-left: 10px;
-		height: 35px;
-		max-height: 35px;
-		padding: 10px 8px;
-	}
-
-	.input-control {
-		padding: 6px 8px;
-		width: 100%;
+		padding: 8px;
 	}
 
 	.gist {
@@ -22,9 +14,9 @@
 	}
 
 	&__file {
-		margin: 4px;
-		padding-top: 4px;
+		margin: 3px;
 		padding-bottom: 4px;
+		padding-top: 4px;
 	}
 
 	&__file-label {
