Add editor core SCSS variables and mixins

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -1,3 +1,10 @@
+// Core Gutenberg modules
+@import "editor/core/colors";
+@import "editor/core/variables";
+@import "editor/core/breakpoints";
+@import "editor/core/mixins";
+
+// Common
 @import "../common";
 
 // Style icons
