--- a/src/blocks/gallery-carousel/styles/editor.scss
+++ b/src/blocks/gallery-carousel/styles/editor.scss
@@ -4,14 +4,22 @@
 		width: auto;
 	}
 
-	.is-appender,
-	.components-form-file-upload {
+	// Fixes issue where the outline does not fully render due to the outside nature of the core outline style applied.
+	.is-appender {
+		border: 1px dashed $dark-gray-150;
 		height: 100%;
+		margin-bottom: 0;
+		outline: none;
 		width: 100%;
+
+		&:hover {
+			border-color: $dark-gray-500;
+		}
 	}
 
-	.is-appender {
-		margin-bottom: 0;
+	// Set the appender to full height.
+	.blockgallery--figure .components-form-file-upload {
+		height: 100%;
 	}
 
 	// Fixes issue with multiple dropzones displaying when dropping in an image.
