--- a/src/blocks/row/styles/editor.scss
+++ b/src/blocks/row/styles/editor.scss
@@ -89,9 +89,9 @@
 					top: -1px;
 				}
 
-				[data-block] {
+				> [data-block] {
 					margin-bottom: 0;
-					margin-top: 0 !important;
+					margin-top: 0;
 				}
 			}
 
