Change 'blockgallery' prefix to 'coblocks-gallery'

--- a/src/blocks/gallery-carousel/styles/editor.scss
+++ b/src/blocks/gallery-carousel/styles/editor.scss
@@ -18,7 +18,7 @@
 	}
 
 	// Set the appender to full height.
-	.blockgallery--figure .components-form-file-upload {
+	.coblocks-gallery--figure .components-form-file-upload {
 		height: 100%;
 	}
 
