--- a/src/blocks/gallery-carousel/styles/style.scss
+++ b/src/blocks/gallery-carousel/styles/style.scss
@@ -1,11 +1,11 @@
 .wp-block-coblocks-gallery-carousel {
 	&,
-	.blockgallery {
+	.coblocks-gallery {
 		height: 100%;
 		position: relative;
 	}
 
-	.blockgallery--figure {
+	.coblocks-gallery--figure {
 		height: 100%;
 	}
 }
