--- a/src/blocks/gallery-stacked/styles/style.scss
+++ b/src/blocks/gallery-stacked/styles/style.scss
@@ -6,7 +6,7 @@
 		color: #333 !important;
 	}
 
-	.blockgallery--item {
+	.coblocks-gallery--item {
 		margin-left: auto;
 		margin-right: auto;
 
@@ -23,7 +23,7 @@
 		}
 	}
 
-	.blockgallery--caption {
+	.coblocks-gallery--caption {
 		padding-bottom: 1em;
 		padding-top: 1em;
 		text-align: center;
