--- a/src/components/block-gallery/styles/style/_carousel.scss
+++ b/src/components/block-gallery/styles/style/_carousel.scss
@@ -1,4 +1,4 @@
-.blockgallery--item {
+.coblocks-gallery--item {
 	// We really don't want margin on the flickity items.
 	// Set 100% so the ResizableBox functions properly.
 	.wp-block-coblocks-gallery-carousel &,
