--- a/src/components/block-gallery/styles/editor.scss
+++ b/src/components/block-gallery/styles/editor.scss
@@ -4,7 +4,7 @@
 @import "editor/flickity-arrows";
 @import "editor/core-themes";
 
-.blockgallery {
+.coblocks-gallery {
 	.components-resizable-box__handle {
 		z-index: 9999;
 	}
