--- a/src/components/block-gallery/styles/editor/_radius.scss
+++ b/src/components/block-gallery/styles/editor/_radius.scss
@@ -1,7 +1,7 @@
 // Utility class for adding a border-radius to the figure elements.
 @for $i from 2 through 20 {
 	.has-border-radius-#{ $i } {
-		.blockgallery--figure::after {
+		.coblocks-gallery--figure::after {
 			border-radius: #{$i}px;
 		}
 
