--- a/src/components/block-gallery/styles/style/_core-themes.scss
+++ b/src/components/block-gallery/styles/style/_core-themes.scss
@@ -3,7 +3,7 @@
 		margin-bottom: 46px;
 		margin-top: 46px;
 
-		.blockgallery--caption {
+		.coblocks-gallery--caption {
 			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 				"Helvetica Neue", sans-serif;
 			font-size: 0.71111em;
@@ -24,14 +24,14 @@
 		margin-bottom: 1.75em;
 		margin-top: 1.65em;
 
-		.blockgallery--primary-caption {
+		.coblocks-gallery--primary-caption {
 			font-style: italic;
 			margin-bottom: -10px;
 			margin-top: 1em;
 		}
 
 		&:not([class*="masonry"]) {
-			.blockgallery:not(.has-caption-color) figcaption {
+			.coblocks-gallery:not(.has-caption-color) figcaption {
 				color: #555d66;
 			}
 		}
@@ -47,7 +47,7 @@
 		margin-bottom: 2.3em;
 		margin-top: 2.3em;
 
-		.blockgallery--primary-caption {
+		.coblocks-gallery--primary-caption {
 			margin-bottom: -10px;
 			margin-top: 0.6em;
 		}
@@ -63,7 +63,7 @@
 		margin-bottom: 2.2em;
 		margin-top: 2.2em;
 
-		.blockgallery--primary-caption {
+		.coblocks-gallery--primary-caption {
 			margin-bottom: -15px;
 			margin-top: 0.5em;
 			padding-bottom: 0;
@@ -80,7 +80,7 @@
 		margin-bottom: 30px;
 		margin-top: 30px;
 
-		.blockgallery--primary-caption {
+		.coblocks-gallery--primary-caption {
 			margin-bottom: -7px;
 			text-align: left;
 		}
@@ -92,7 +92,7 @@
 		margin-bottom: 30px;
 		margin-top: 34px;
 
-		.blockgallery--primary-caption {
+		.coblocks-gallery--primary-caption {
 			margin-bottom: -10px;
 		}
 	}
@@ -108,11 +108,11 @@
 		margin-top: 32px;
 
 		// Override the theme's border radius behavior for our blocks.
-		.blockgallery:not([class*="border-radius"]) img {
+		.coblocks-gallery:not([class*="border-radius"]) img {
 			border-radius: inherit;
 		}
 
-		.blockgallery--primary-caption {
+		.coblocks-gallery--primary-caption {
 			margin-bottom: -10px;
 		}
 	}
@@ -128,13 +128,13 @@
 		margin-top: 33px;
 
 		// Override the theme's padding/border effect on our blocks.
-		.blockgallery img {
+		.coblocks-gallery img {
 			border: 0;
 			max-width: 100%;
 			padding: 0;
 		}
 
-		.blockgallery--primary-caption {
+		.coblocks-gallery--primary-caption {
 			margin-bottom: -15px;
 
 			&::before {
