--- a/src/components/block-gallery/styles/style/_radius.scss
+++ b/src/components/block-gallery/styles/style/_radius.scss
@@ -1,14 +1,12 @@
 // Utility class for adding a border-radius to the figure elements.
 @for $i from 2 through 20 {
-
 	&.has-border-radius-#{ $i } {
-
-		.blockgallery--item img {
-			border-radius: #{ $i }px;
+		.coblocks-gallery--item img {
+			border-radius: #{$i}px;
 		}
 
-		.blockgallery--item figcaption {
-			border-radius: 0 0 #{ $i }px #{ $i }px;
+		.coblocks-gallery--item figcaption {
+			border-radius: 0 0 #{$i}px #{$i}px;
 		}
 	}
 }
